참고폴더/PART-2-EKS-Practice/09-msa-deploy/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: order
  labels:
    eks-study/part: "2"
    eks-study/module: "09"
